icm-macros/testing/pack/errors/FunctionField.sol
pragma solidity ^0.8.30;

// #[pack()]
struct HasFunction {
    function() external handler;
}